<resources>
    <string name="app_name">Pet Butler</string>
    <string-array name="Pets">
        <item>Cachorro</item>
        <item>Gato</item>
        <item>Ave</item>
        <item>Jabuti</item>
        <item>Roedor</item>
    </string-array>
    <string name="mainMenuTitle">Escolha de Serviço</string>
    <string name="descriptionEmergency">Botão para emergências</string>
    <string name="passeiosTitle">Passeios</string>
    <string name="hotelTitle">Hotel</string>
    <string name="entregasTitle">Entregas</string>
    <string name="transportesTitle">Transportes</string>
    <string name="button_confirmar">CONFIRMAR</string>
    <string name="cadastroTitle">Cadastro</string>
    <string name="nome">Nome</string>
    <string name="sobrenome">Sobrenome</string>
    <string name="email">E-mail</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="confirmarSenha">Confirmar senha</string>
    <string name="CPF">CPF (apenas dígitos)</string>
    <string name="telefone">Telefone</string>
    <string name="resumo">Sobre você</string>
    <string name="who">Quem é você?</string>
    <string name="cliente">Cliente</string>
    <string name="butler">Butler</string>
    <string name="editarPerfilTitler">Editar Perfil</string>
    <string name="fotoPerfil">Foto de perfil</string>
    <string name="login">Login</string>
    <string name="button_login">LOGIN</string>
    <string name="button_cadastro">CADASTRO</string>
    <string name="perfilTitle">Perfil</string>
    <string name="editarPerfilButtonDescription">Redireciona para tela de editar perfil</string>
    <string name="addPetbuttonDescription">Botão para adicionar novo pet</string>
    <string name="pets">Pets</string>
    <string name="notaCliente" translatable="false">Nota cliente</string>
    <string name="notaButler">Nota Butler</string>
    <string name="crmv">CRMV</string>
    <string name="servicos">Serviços Prestados</string>
    <string name="title_activity_menu_lateral">MenuLateral</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Configurações</string>
    <string name="menu_home">Início</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="help">Ajuda</string>
    <string name="perfil">Perfil</string>
    <string name="logPedidos">Histórico de Pedidos</string>
    <string name="emergencia">Emergência</string>
    <string name="animalEmergencia">Qual animal precisa de ajuda?</string>
    <string name="descricaoEmergencia">Descreva sua emergência:</string>
    <string name="inputEndereco">Insira o endereço</string>
    <string name="buttonEnviarEmergencia">Enviar emergência</string>
    <string name="title_activity_entrega">EntregaActivity</string>
    <string name="title_activity_transporte">Transporte</string>
    <string name="options">Opções</string>
    <string name="tipo">Tipo</string>
    <string name="endereco">Endereço</string>
    <string name="valor">Valor</string>
    <string name="animal">Animal</string>
    <string name="descricao">Descrição</string>
    <string name="title_activity_menu_lateral_butler">MenuLateralButlerActivity</string>
    <string name="enviar">Enviar</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="button">Button</string>
    <string name="cachorro">Cachorro</string>
    <string name="p_ssaro">Pássaro</string>
    <string name="gato">Gato</string>
    <string name="o_que_deseja_comprar">O que deseja comprar?</string>
    <string name="endere_o_de_entrega">Endereço de entrega</string>
    <string name="onde_encontrar_o_produto">Onde encontrar o produto?</string>
    <string name="pagamento">Pagamento</string>
    <string name="dinheiro">Dinheiro</string>
    <string name="cartao">Cartão</string>
    <string name="nome_pet">Nome Pet</string>
    <string name="data_nascimento">Data de Nascimento</string>
    <string name="peso_pet2">Peso Pet</string>
    <string name="tamanho_pet">Tamanho Pet</string>
    <string name="resumo_pet">Descrição do seu Pet</string>
    <string name="nota_Pet">Nota Pet</string>
    <string name="nome_pet2">Nome Pet</string>
    <string name="peso_pet">Peso Pet</string>
    <string name="tamanho_pet2">Tamanho Pet</string>
    <string name="data_nasc">Data Nascimento</string>
    <string name="desc_animal">Descrição Animal</string>
    <string name="tipo_animal">Tipo Animal</string>
    <string name="ButlerMenuTitle">Solicitações de Serviços</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="adicionar">Adicionar</string>
    <string name="comentario">Você pode deixar um comentário</string>
    <string name="tempo_de_dura_o">Tempo de duração</string>


</resources>
