<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_dialog_map"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_perfil"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/perfil" />
        <item
            android:id="@+id/nav_pagamento"
            android:icon="@android:drawable/ic_menu_compass"
            android:title="$ Pagamento" />
        <item
            android:id="@+id/nav_logPedidos"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/logPedidos" />
        <item
            android:id="@+id/nav_emergencia"
            android:icon="@android:drawable/ic_dialog_alert"
            android:title="@string/emergencia" />
    </group>

    <item android:title="@string/options">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_dialog_info"
                android:title="@string/help" />
        </menu>
    </item>

</menu>
