<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.petbutler.ui.Home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_perfil"
        android:name="com.example.petbutler.ui.Perfil.PerfilClienteFragment"
        android:label="@string/perfil"
        tools:layout="@layout/fragment_perfil_cliente" />

    <fragment
        android:id="@+id/nav_logPedidos"
        android:name="com.example.petbutler.ui.LogPedidos.LogPedidosFragment"
        android:label="@string/logPedidos"
        tools:layout="@layout/fragment_log_pedidos" />

    <fragment
        android:id="@+id/nav_emergencia"
        android:name="com.example.petbutler.ui.Emergencia.EmergenciaFragment"
        android:label="@string/emergencia"
        tools:layout="@layout/fragment_emergencia" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.petbutler.ui.tools.ToolsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_tools" />



</navigation>