<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenActivity">

    <Button
        android:id="@+id/buttonWalking"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:text="@string/passeiosTitle"
        app:layout_constraintEnd_toStartOf="@+id/buttonHotel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <Button
        android:id="@+id/buttonHotel"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/hotelTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <Button
        android:id="@+id/buttonProducts"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:text="@string/entregasTitle"
        app:layout_constraintEnd_toStartOf="@+id/buttonTransport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonWalking" />

    <Button
        android:id="@+id/buttonTransport"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/transportesTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonHotel" />

    <ImageButton
        android:id="@+id/imageEmergency"
        android:layout_width="130dp"
        android:layout_height="80dp"
        android:layout_marginBottom="120dp"
        android:contentDescription="@string/descriptionEmergency"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonProducts"
        app:layout_constraintVertical_bias="0.74"
        app:srcCompat="@android:drawable/ic_notification_overlay" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/mainMenuTitle"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>