<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.ProcuraServico.PasseadorActivity">

    <Button
        android:id="@+id/buttonConfirmPasseador"
        android:layout_width="155dp"
        android:layout_height="55dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_button"
        android:text="@string/pesquisar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listViewPasseador"
        android:textColor="#FFFF" />

    <ListView
        android:id="@+id/listViewPasseador"
        android:layout_width="0dp"
        android:layout_height="286dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextBairroPasseador" />

    <EditText
        android:id="@+id/editTextEstadoPasseador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/estado"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextBairroPasseador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/bairro"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCidadePasseador"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editTextCidadePasseador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:hint="@string/cidade"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEstadoPasseador"
        android:importantForAutofill="no" />

    <RadioGroup
        android:id="@+id/radioGroupPasseador"
        android:layout_width="95dp"
        android:layout_height="109dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/editTextCidadePasseador"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonCachorroPasseador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cachorro" />

        <RadioButton
            android:id="@+id/radioButtonPassaroPasseador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/p_ssaro" />

        <RadioButton
            android:id="@+id/radioButtonGatoPasseador"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gato" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>